[metadata]
name = Blinker
version = 0.3.0
author = stao
author_email = werewolf_st@hotmail.com
description = Blinker library in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blinker-iot/blinker-py
project_urls =
    Bug Tracker = https://github.com/blinker-iot/blinker-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = blinker
packages = find:
python_requires = >=3.6

[options.packages.find]
where = blinker